--- a/project.json
+++ b/project.json
@@ -3,16 +3,21 @@
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
+    "Google.Apis": "[1.57.0]",
+    "Google.Apis.Auth": "[1.57.0]",
+    "Google.Apis.PeopleService.v1": "[1.57.0.2707]",
+    "Google.Apis.SQLAdmin.v1": "[1.57.0.2730]",
     "UiPath.Excel.Activities": "[2.11.4]",
     "UiPath.Mail.Activities": "[1.12.3]",
     "UiPath.System.Activities": "[21.10.4]",
-    "UiPath.UIAutomation.Activities": "[21.10.5]"
+    "UiPath.UIAutomation.Activities": "[21.10.5]",
+    "UiPath.WebAPI.Activities": "[1.11.1]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "21.10.5.0",
-  "projectVersion": "1.0.3",
+  "projectVersion": "1.0.5",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
