--- a/project.json
+++ b/project.json
@@ -7,17 +7,18 @@
     "Google.Apis.Auth": "[1.57.0]",
     "Google.Apis.PeopleService.v1": "[1.57.0.2707]",
     "Google.Apis.SQLAdmin.v1": "[1.57.0.2730]",
+    "JET_Library": "[1.0.151]",
     "UiPath.Excel.Activities": "[2.11.4]",
     "UiPath.Mail.Activities": "[1.12.3]",
-    "UiPath.System.Activities": "[21.10.4]",
-    "UiPath.UIAutomation.Activities": "[21.10.5]",
+    "UiPath.System.Activities": "[22.4.1]",
+    "UiPath.UIAutomation.Activities": "[22.4.6]",
     "UiPath.WebAPI.Activities": "[1.11.1]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "21.10.5.0",
-  "projectVersion": "1.0.5",
+  "projectVersion": "1.0.6",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
